# LLMManager

./: README.md  main.py  pyproject.toml
core/: __init__.py  config.py  llm.py  llmmanager.py  message.py
llms/: openrouterllm.py  togetherllm.py
