[project]
name = "llmmanager"
version = "0.1.0"
description = "A lightweight, extensible manager for multiple LLMs"
authors = [
  { name="Logan Gauchat", email="logangosha@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.urls]
"Source" = "https://github.com/logangosha/llmmanager"

[tool.setuptools.packages.find]
where = ["llmmanager"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
